bdr.BDR.scala.error
Compilation error:
BDR:16: error: not found: value True
else finished = True}
                ^